<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Olympus View Messaging</string>
    <string name="crash_toast_text">Send crash by choosing Gmail app.</string>
    <string name="widget_name">AA Flash Messaging</string>
    <string name="stack_widget_name">AA Olympus View Messaging</string>
    <string name="admob_id">d289cfc7828046c9</string>
    <string name="nativex_id">20174</string>
    <string name="flurry_api_key">Z8B8GXZBPBT85ZYPHH86</string>
    <string name="inapp_license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAmtQpa8+pvoGnBi+AsmZhHKLttdj1r1pMCf3zRs3BVGarDC2gMe1dHDZqfD8lfThq1XZEez9eGvMRgoLEvRltm5kK9RPjK86xm0g6S/PSJcVIHlkks66hukkk9onRNdXbe4lqoHZZuqkITdxFrk18VbRtnoQq5Q1hp8lhCBbCJW5vVwvxbhfUJGpDuB+CoZAAdGvFd/rCoQikHmWDibAQ2Z2h0d/n0SVIgFdgH14eArE921jrgxoNwmY5wC7cmEBQHw891m9JAEVvx+aNjk0YNUztB20JMbwGD2sxxfLyhEkDKklKLKAcm5t/NnnlfsCl/ve+rHy9KWNrsOyR19sUswIDAQAB</string>
    <string name="startapp_app_id">202736842</string>
    <string name="startapp_developer_id">102340484</string>
    <string name="finish_action_SMS_MissedContact">com.olympus.viewsms.action.finish.SMS_MissedContact</string>
    <string name="finish_action_SMS_Single">com.olympus.viewsms.action.finish.SMS_Single</string>
    <string name="finish_action_SMS_StackView">com.olympus.viewsms.action.finish.SMS_StackView</string>
    <string name="tapjoy_app_id">c82e3df9-b9fc-4c28-a8cf-c5cdb2618122</string>
    <string name="tapjoy_secret_key">dWcqAUlpORtdNOmdZzS2</string>
    <string name="parse_app_id">FcrA8LoLr0LdzOYcsOod3q1Ooo5x6B3gWzFNJ5RB</string>
    <string name="parse_client_key">Iu8nRWKCXC5Er0sqBMHv1xjv0vZbPGUaAFvUXj85</string>

    <!-- translation -->

    <string name="setting">Settings</string>
    <string name="grp_general">GENERAL</string>
    <string name="grp_theme">THEME</string>
    <string name="grp_share">SHARE</string>
    <string name="notification">Notifications</string>
    <string name="notification_des">App enable on or off</string>
    <string name="my_theme">My Themes</string>
    <string name="available_theme">Available Themes</string>
    <string name="more_theme">Browse More Themes</string>
    <string name="more_theme_des">Find theme\'s for the Picasso in you</string>
    <string name="olympusview">Olympus View</string>
    <string name="olympusview_des">Set the theme for the multiple missed messages alert feature</string>
    <string name="share">This is amazing!</string>
    <string name="share_des">Share this with my friends</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="already">Already</string>
    <string name="demo_string">Demo</string>
    <string name="unlock_free">Use it</string>
    <string name="choose_contact">Choose</string>
    <string name="set_all">Set for all or all others</string>
    <string name="set_all_ask">This option has been set for another theme. Would you like to set it to this theme?</string>
    <string name="contact_applied">contact(s) was applied!</string>
    <string name="plz_wait">Please wait</string>
    <string name="retrieve_contact">Retrieving contacts...</string>
    <string name="not_found_contact">No contact found in this device!</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reply">Reply</string>
    <string name="call_back_tomorrow">Please call me back tomorrow</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="inapp_not_supported">Sorry! In-app Purchase not supported on your device yet.</string>
    <string name="inapp_cant_start">Sorry! In-app Purchase can\'t start on your device.</string>
    <string name="checking_product">Waiting for checking your product...</string>
    <string name="theme_added">has been added to My Themes!</string>
    <string name="olympus_theme">Olympus View Themes</string>
    <string name="widget_added">A SMS unread widget is available and can be added from Widget Picker</string>
    <string name="notify_en">Notifications are enable!</string>
    <string name="notify_dis">Notifications are disable!</string>
    <string name="olympus_en">Olympus View theme is enable!</string>
    <string name="olympus_dis">Olympus View theme is disable!</string>
    <string name="share_cmt">I\'m using Olympus View Messaging. This is amazing, you can install it now from: </string>
    <string name="share_how">How do you want to share?</string>
    <string name="enable_olympus">Do you want to enable separate for olympus view?</string>
    <string name="quick_reply">Quick Reply</string>
    <string name="to">To:</string>
    <string name="sms_sent">SMS Sent!</string>
    <string name="sms_sent_failed">SMS failed, please try again later!</string>
    <string name="speech_not_supported">Oops! Your device doesn\'t support Speech to Text</string>
    <string name="language">Language</string>
    <string name="loading_text">Loading &#8230;</string>
    <string name="choose">Choose</string>
    <string name="speak_label">Speak now</string>
    <string name="reply_label">Reply</string>
    <string name="unlock_theme_dialog_title">Invite 5 Friends \nAnd unlock this theme for \nfree</string>
    <string name="already_have_wear_theme">You already have this theme installed for android wear! go ahead and start setting it to any of your contacts</string>

</resources>