<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/note_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/TextView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grp_general"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/note_frame_bg" >

                <LinearLayout
                    android:id="@+id/LinearLayout02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/note_color"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/ln_notifyenable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/TextView05"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/notification"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/black_color"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/TextView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/notification_des"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/text_color"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/chk_notifyenable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/note_frame_bg"
                android:visibility="gone" >

                <LinearLayout
                    android:id="@+id/LinearLayout04"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/note_color"
                    android:clickable="true"
                    android:onClick="OnClickMoreTheme"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/TextView07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/language"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_langname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="abc"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grp_theme"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/note_frame_bg" >

                <LinearLayout
                    android:id="@+id/LinearLayout01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/note_color"
                    android:clickable="true"
                    android:onClick="OnClickMyTheme"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:text="@string/my_theme"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/note_frame_bg" >

                <LinearLayout
                    android:id="@+id/LinearLayout06"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/note_color"
                    android:clickable="true"
                    android:onClick="OnClickMoreTheme"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/TextView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/more_theme"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TextView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/more_theme_des"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/note_frame_bg" >

                <LinearLayout
                    android:id="@+id/LinearLayout07"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white_color"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/ln_olympustheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/note_color"
                        android:clickable="true"
                        android:onClick="OnClickOlympusTheme"
                        android:orientation="vertical"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/TextView04"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/olympusview"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/black_color"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/TextView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/olympusview_des"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/text_color"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/chk_olympustheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grp_share"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/note_frame_bg" >

                <LinearLayout
                    android:id="@+id/LinearLayout03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/note_color"
                    android:clickable="true"
                    android:onClick="OnClickShare"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/TextView06"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/share"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/black_color"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/share_des"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/text_color"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_share" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

    </ScrollView>

    <include layout="@layout/google_admob" />
    
</LinearLayout>
