<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/note_frame_bg" >

        <LinearLayout
            android:id="@+id/ln_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/note_color"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="2dp" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true" >

                <include
                    android:layout_width="@dimen/sms_w"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    layout="@layout/sms_dialog_temple"
                    />

                <LinearLayout
                    android:id="@+id/ln_item_inside"
                    android:layout_width="@dimen/sms_w"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:clickable="true"
                    android:orientation="vertical" >
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="5dp" >



                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"
                    android:textSize="13sp"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <FrameLayout
                        android:id="@+id/fl_buy"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" >

                        <LinearLayout
                            android:id="@+id/ln_apply"
                            android:layout_width="wrap_content"
                            android:visibility="gone"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal" >

                            <ImageView
                                android:id="@+id/img_apply"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_cab_done_holo_light" />

                            <TextView
                                android:id="@+id/TextView01"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/already"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/text_color"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <RelativeLayout
                            android:id="@+id/buyLayout"
                            android:layout_width="@dimen/sms_w"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_horizontal"
                             >

                            <Button
                                android:id="@+id/btn_buy"
                                android:layout_width="100dp"
                                android:layout_height="match_parent"
                                android:background="@drawable/addtocart_button"
                                android:text="@string/demo_string"
                                android:textColor="@color/white_color"
                                android:textSize="12sp" />

                            <Button
                                android:id="@+id/unlock_free_button"
                                android:layout_width="100dp"
                                android:layout_height="match_parent"
                                android:layout_alignParentRight="true"
                                android:background="@drawable/addtocart_button"
                                android:text="@string/unlock_free"
                                android:textColor="@color/white_color"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/ortext"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="OR"

                                android:textColor="#959595"
                                android:textSize="18sp" />
                            <ImageView
                                android:id="@+id/wearIconCenterView"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/wear_icon"
                                 />
                            <ImageView
                                android:id="@+id/wearIconRightView"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_alignParentRight="true"
                                android:background="@drawable/wear_icon"
                                />
                        </RelativeLayout>
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>